--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.13.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
@@ -17,6 +18,7 @@
     "@mui/material": "^5.11.16",
     "axios": "^1.3.5",
     "buffer": "^6.0.3",
+    "Buffer": "^0.0.0",
     "downloadjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
